--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:mem:library
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
